<resources>
    <string name="app_name">vLogon</string>
    <string name="label_log_in">Login</string>
    <string name="label_sign_up">Signup</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="label_log_username">Login with Linkedin</string>
    <string name="label_login_google">Login with Google</string>
    <string name="label_login_facebook">Login with Facebook</string>
    <string name="label_close">X Close</string>
    <string name="label_skip">Skip</string>
    <string name="label_log_out">LOGOUT</string>
    <string name="err_no_data">Currently no content is available.</string>
    <string name="err_no_internet">Internet is not connected.</string>
    <string name="facebook_app_id">271184516944197</string>
    <string name="twitter_consumer_key">PZfh2D5rCcVVutfCNh8wNPil1</string>
    <string name="twitter_consumer_secret">6C1HxX9W6f7ntBZsrJKxaTrgb7DURNBx211jEcPFtnpFRUEYnm</string>
    <string name="termandcondition">I agree with the Terms and conditions</string>
    <string name="allowsendnewsoffer">Allow vency to send you news and offers</string>
    <string name="remember">Remember</string>
    <string name="signuptext">Create a new account?
        <b>Sign Up</b>
    </string>
    <string name="signupregisterbyemail">Register By Email
    </string>
    <string name="socialregisterbyemail">Register By
    </string>
    <string name="logintext">Have an account?
        <b>Log In</b>
    </string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="skill">Skills</string>
    <string name="achievements">Achievements</string>
    <string name="degreetext">Degree/Diploma/Master/Phd</string>
    <string name="fieldofstudy">Field Of Study</string>
    <string name="collageoruniversity">College/University</string>
    <string name="yearofcompletion">Year Of Completion</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="description">Description</string>
    <string name="currentworkhere">I Currently Work Here</string>
    <string name="companyachivements">Company</string>
    <string name="titleachivements">Title</string>
    <string name="link">Link</string>
    <string name="descriptionachivements">Description</string>
    <string name="skills">Skills</string>
    <string name="action_backup">Backup</string>
    <string name="action_backup_drive">Backup</string>
    <string name="action_import">Import</string>
    <string name="action_import_drive">Import from Drive</string>
    <string name="action_clear_data">Clear All Data</string>
    <string name="action_settings">Settings</string>
    <string-array name="dialog_items_choose_image">
        <item>@string/camera</item>
        <item>@string/gallery</item>
        <item>@string/cancel</item>
    </string-array>
    <string name="pick_image">Pick Image</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Photo Gallery</string>
    <string name="activity_backup_drive_desc">Backing up your data to Google Drive allows you to restore all your
        readings in case you lose or change devices.
    </string>
    <string name="activity_backup_drive_last">Last backup:</string>
    <string name="activity_backup_drive_folder">Google Drive</string>
    <string name="activity_backup_drive_folder_not_set">Not set</string>
    <string name="activity_backup_drive_button_backup">Backup now</string>
    <string name="activity_backup_drive_dialog_restore_title">Revert to previous version</string>
    <string name="activity_backup_drive_dialog_restore_desc">Restoring the backup will overwrite all the existing data
        with the backup.
    </string>
    <string name="activity_backup_drive_dialog_restore_button_cancel">Cancel</string>
    <string name="activity_backup_drive_dialog_restore_button_restore">Restore backup</string>
    <string name="activity_backup_drive_button_open_drive">Manage on Drive</string>
    <string name="dailybackup">Daily Backup</string>
</resources>