<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"

            app:cardElevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/dimen_0"
            android:id="@+id/llClubDetailsToolbar"
            android:layout_height="wrap_content">
        <include

                layout="@layout/layout_toolbar"/>
    </android.support.v7.widget.CardView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/activity_backup_drive_desc"
                    android:textColor="@color/glucosio_text"/>

            <Button
                    android:id="@+id/button_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:text="@string/activity_backup_drive_button_backup"
                    android:textStyle="bold"
                    android:textColor="@color/glucosio_fab_ketones"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/backuptext"
                    android:gravity="right"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="0/100"/>
            <ProgressBar
                    android:id="@+id/packupprogressbar"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="100"
                    android:visibility="gone"
                    android:progressDrawable="@color/glucosio_accent"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" />


            <Button
                    android:id="@+id/button_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:text="Restore Now"
                    android:textColor="@color/glucosio_fab_ketones"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/restoretext"
                    android:gravity="right"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="0/100"/>
            <ProgressBar
                    android:id="@+id/restoreprogressbar"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="100"
                    android:visibility="gone"
                    android:progressDrawable="@color/glucosio_accent"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/activity_backup_drive_last"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="N/A"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="15dp"
                    android:background="@color/glucosio_separator"/>

            <LinearLayout
                    android:id="@+id/activity_backup_drive_button_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                <TextView
                        fontPath="fonts/lato-bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/activity_backup_drive_folder"
                        android:textColor="@color/glucosio_text"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix"/>

                <TextView
                        android:id="@+id/activity_backup_drive_textview_folder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:paddingRight="16dp"
                        android:text="@string/activity_backup_drive_folder_not_set"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/activity_backup_drive_button_manage_drive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="4dp"
                    android:text="@string/activity_backup_drive_button_open_drive"
                    android:textAllCaps="true"
                    android:textColor="@color/glucosio_text_light"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/glucosio_separator"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Account"
                    android:textAllCaps="true"
                    android:textColor="@color/glucosio_text"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Account Name"
                    android:id="@+id/txtaccountname"
                    android:textColor="@color/glucosio_text"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="Set Password"
                    android:id="@+id/txtpasswordset"
                    android:textAllCaps="true"
                    android:textColor="@color/glucosio_text"
                    android:textStyle="bold"/>

            <CheckBox
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="5dp"
                    android:id="@+id/checkBoxdailybackup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/dailybackup"
            />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>